# yayoi-next-bridge

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.md.bak  codecov.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
archive/reference/: Convert-PayrollToAccounting.ps1  main.py
archive/yayoi_next_bridge/: __init__.py
archive/yayoi_next_bridge/gui/: __init__.py  app.py
chrome-extension/: .gitignore  PRIVACY.md  README.md  biome.json  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
chrome-extension/assets/icons/: README.md
chrome-extension/src/background/: service-worker.ts
chrome-extension/src/content/: content-script.ts
chrome-extension/src/converter/: converter.ts  csv.ts  types.ts
chrome-extension/src/lib/: encoding.ts
chrome-extension/src/panel/: panel.css  panel.html  panel.ts
chrome-extension/tests/: converter.test.ts  encoding.test.ts
docs/: chrome-extension-plan.md  release.md
reference/: README.md  convert_payroll_to_accounting.py  pyproject.toml
scripts/: bump-version.js  release.js
tampermonkey/: README.md  yayoi-next-bridge.user.js
tests/: test_converter.py
yayoi_next_bridge/core/: __init__.py  converter.py
